Fix issue with skills being cut off when using Tidy5e Sheet
- Resolves issue #1

--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
     border: 1px gray solid;
     flex: 0 0 1px;
     padding: 0;
-    margin-top: 1px;
     margin-right: 2px;
     text-align: center;
+    height: 1rem;
 }
 
 .dnd5e.sheet.actor .skills-list > .skill > .skill-ability-select {
